syntax = "proto3";

option csharp_namespace = "TasksTemplatesService";

package TaskTemplates.v1;

// The greeting service definition.
service TaskTemplates {
  rpc GetTemplateList(TemplateListRequest) returns (TemplateListReply);
  rpc CreateTemplate(CreateTemplateRequest) returns (CreateTemplateReply);
  rpc UpdateTemplate(UpdateTemplateRequest) returns (BoolReply);
  rpc DeleteTemplate(DeleteTemplateRequest) returns (BoolReply);
}



message messageEdge
{
	int64 id = 1;
	int64 internal_num = 2;
	string name = 3;	
	string description = 4;	
	int64 node_from_num = 5;
	int64 node_to_num = 6;
}

message messageNode	
{
  int64 id = 1;
  int64 internal_num = 2;
  int64 definition_id = 3;
  string name = 4;	
  string description = 5;	
}



// GetTemplate
message TemplateListRequest 
{
  int64 id = 1;
  int64 company_id = 2;
}


message TemplateListReply 
{
	repeated TemplateListItem items = 1;
}

message TemplateListItem {
	int64 Id = 1;
	string name = 2;	
	string description = 3;	
	repeated messageNode nodes = 4;
	repeated messageEdge edges = 5;
}


/// Create Template
message CreateTemplateRequest 
{
	string name = 1;	
	optional string description = 2;	
	optional int64 company_id = 3;
	repeated messageNode nodes = 4;
	repeated messageEdge edges = 5;
}

message CreateTemplateReply {
	int64 id = 1;
}

// Update
message UpdateTemplateRequest {
	TemplateListItem item = 1;
}

// Delete
message DeleteTemplateRequest {
	int64 id = 1;
}

message BoolReply {
	bool success = 1;
}
